--- a/HelloJSF/WebContent/anotherside.xhtml
+++ b/HelloJSF/WebContent/anotherside.xhtml
@@ -9,6 +9,7 @@
 <f:loadBundle basename="messages" var="msg" />
 <h:head>
 	<title>JSF 2.0 Greeting</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 </h:head>
 <h:body>
 	<div style="position: relative; width: 100%; height: 90%">
