--- a/HelloJSF/WebContent/index.xhtml
+++ b/HelloJSF/WebContent/index.xhtml
@@ -8,6 +8,7 @@
 
 <f:loadBundle basename="messages" var="msg" />
 <h:head>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<title>JSF 2.0 Greeting</title>
 </h:head>
 <h:body>
@@ -19,7 +20,8 @@
 			onclick="copyUrl()" value="Click me" />
 	</div>
 
-	<!--     	http://192.168.80.21:8081/ivy/pro/LDAPXpertGolden/ebas_web/153E5D5E441493A7/startOverview.ivp -->
+	<!-- http://192.168.80.21:8081/ivy/pro/LDAPXpertGolden/ebas_web/153E5D5E441493A7/startOverview.ivp -->
+	<!-- http://localhost:8081/ivy/pro/designer/eportal_web/152A051BB8215DF6/start.ivp -->
 	<div style="position: absolute; width: 100%; height: 90%">
 		<iframe id="iframe"
 			style="position: absolute; width: 100%; height: 100%; top: 0; left: 0;"></iframe>
